Sugati/src/objects/Trip__c.object
<CustomObject>
    <description>This is to be used for Group Booking.</description>
    <fields>
        <fullName>T_City_Place__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City / Place</label>
        <referenceTo>City_Place__c</referenceTo>
        <relationshipLabel>Trips</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T_Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Trips</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>T_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>T_Holiday_Types__c</fullName>
        <label>Holiday Types</label>
        <picklist>
            <picklistValues>
                <fullName>Honeymoons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African Safaris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Before You Die</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Short Breaks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter Sun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Lap of Luxury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skiing Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Breaks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Escape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culture Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Trips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastronomic Treats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sailing, Surfing &amp; Watersports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Hire Properties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventure &amp; the Great Outdoors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Beach Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert-Led Journeys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christmas &amp; New Year Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celebrate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walking Holidays</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>T_Interest__c</fullName>
        <label>Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Fine Dining</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>T_Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Ocean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>T_Trip_Name__c</fullName>
        <label>Trip Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_When__c</fullName>
        <description>This trip is ideal to travel on</description>
        <inlineHelpText>This trip is ideal to travel on</inlineHelpText>
        <label>When</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Trip</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>Trips ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trips</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>